@startuml
'https://plantuml.com/class-diagram
/'客户端'/
class client{

}

/'component为所有对象定义一个类，不管是叶子还是节点'/
class Component{
    void add();
    void remove();
    void print();
}
/'依赖'/
client ..> Component

/'叶子没有孩子，不能操作孩子，但其定义组合内元素的行为'/
class leaf{

}

/'组合可以操作子节点和叶子，但可能不具有叶子的某些行为'/
class Composite{

}

/'继承/扩展/泛化'/
Component <|-- leaf
Component <|-- Composite

/'聚合'/
Composite o-- Component
@enduml